# kogito

./: .flake8  .gitattributes  .gitignore  .mypy.ini  .readthedocs.yaml  README.md  demo.ipynb  pyproject.toml  setup.py  tox.ini
app/: docker-compose.yml
app/client/: Dockerfile  package-lock.json  package.json
app/server/: .dockerignore  Dockerfile  inference.py  requirements.txt  server.py
docs/: api.rst  conf.py  getting_started.rst  index.rst  requirements.txt  userguide.rst
examples/: comet_bart.py  comet_gpt2.py  demo.ipynb  evaluate_comet_bart.py  evaluate_comet_gpt2.py  gpt3_prompt_9aeef90f.txt  gpt3_prompt_9d6f5079.txt  gpt3_prompt_f335029d.txt  kgraph.json  kgraph2.json  kgraph_dry_run.json  kgraph_dry_run_2.json  kgraph_gpt3.json  kgraph_gpt3_custom_relation.json  kgraph_gpt3_dry_run.json  kgraph_manual.json  kgraph_manual_heads.json  kgraph_modelbased_relations.json  kgraph_modelbased_relations_dbert.json  kgraph_modelbased_relations_swem.json  kgraph_no_head_extract.json  kgraph_no_match_subset.json  kgraph_rel_subset.json  relation_model.ipynb  relation_model_spacy.ipynb  relation_modeling.py  relation_modeling_bert.ipynb  relation_modeling_bert.py  relation_modeling_bert2.ipynb  relation_modeling_sense.ipynb  relation_modeling_swem.ipynb  relation_modeling_swem2.ipynb  relation_modeling_swem_finetune.ipynb  relation_modeling_swem_multi.ipynb  relation_modeling_swem_multi_max.ipynb  relation_modeling_swem_multi_no_pad.ipynb  relation_modeling_swem_multi_no_pad_max.ipynb  relation_modeling_swem_nn.ipynb  relation_modeling_swem_no_pad.ipynb  relation_modeling_transformer.ipynb  (+16 more)
examples/docker/: Dockerfile  build.sh  entrypoint.sh  push.sh  (+1 more)
kogito/: inference.py
scripts/: convert_atomic.py  convert_atomic_bart.py  convert_atomic_test.py  convert_comet_gpt2_outputs.py  convert_gpt2_outputs.py  setup_data.sh
(+108 files in other folders)
