[tool.poetry]
name = "kogito"
version = "0.1.0"
description = "A Python NLP Commonsense Reasoning library"
authors = ["Mete Ismayil <mahammad.ismayilzada@epfl.ch>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sacrebleu = "~2.0.0"
rouge-score = "~0.0.4"
pytorch-lightning = "0.8.5"
git-python = "1.0.3"
pandas = "~1.3.5"
spacy = "~3.2.3"
inflect = "~5.3.0"
transformers = "~4.15.0"
wandb = "~0.12.9"
torch = "~1.10.1"
pytextrank = "~3.2.2"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
