[tool.poetry]
name = "kogito"
version = "0.3.1"
description = "A Python NLP Commonsense Reasoning library"
authors = ["Mete Ismayil <mahammad.ismayilzada@epfl.ch>", "Antoine Bosselut <antoine.bosselut@epfl.ch>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/mismayil/kogito"
repository = "https://github.com/mismayil/kogito"
documentation = "https://github.com/mismayil/kogito"
keywords = [
    "natural language processing",
    "nlp", 
    "natural language understanding", 
    "commonsense reasoning", 
    "commonsense inference"
]
classifiers = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sacrebleu = "^2.0.0"
rouge-score = "^0.0.4"
pytorch-lightning = "^1.5.10"
pandas = "^1.3.5"
spacy = "^3.2.3"
inflect = "^5.3.0"
transformers = "^4.15.0"
wandb = "^0.12.9"
torch = "^1.10.1"
openai = "^0.18.1"
bert-score = "^0.3.11"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
black = "*"
mypy = "*"
sphinx = "*"
insegel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
